<resources>
    <string name="app_name">eCare</string>
    <string name="title_activity_navigation_drawer">Doctor Appoinment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="Pharmacy_button_paracetamol">Paracetamol</string>
    <string name="show_Pharmacy">Pharmacy</string>
    <string name="Price">Rs. 100</string>
    <string name="Description">Description</string>
    <string name="Price_type">Per Strip(12 Tabs)</string>
    <string name="Price_calculated">Rs. 200</string>
    <string name="Usage">Usage</string>
    <string name="Ingredient">Ingredients</string>
    <string name="Side_Effects">Side Effects</string>
    <string name="title_activity_pharmacy_adding_medicine_admin">pharmacyAddingMedicineAdmin</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_doctor_home">DoctorHomeActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_list_of_doctors">ListOfDoctorsActivity</string>
    <string name="title_activity_patient_portal">PatientPortal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Pharmacy_button_Amoxicillin">Amoxicillin</string>
    <string name="Pharmacy_button_Oxycodone">Oxycodone</string>
    <string name="Pharmacy_button_Cymbalta">Cymbalta</string>
    <string name="Search">Search</string>
    <string name="Content_Description">Image_of_the_medicine</string>
    <string name="Pharmacy_name">Name</string>
    <string name="Pharmacy_Usage">Usage</string>
    <string name="Pharmacy_description">Description</string>
    <string name="Pharmacy_Ingredients">Ingredients</string>
    <string name="Pharmacy_Price">Price</string>
    <string name="Pharmacy_sideEffects">Side Effects</string>
    <string name="Pharmacy_Total_Cost">Total Cost : Rs. 600</string>
    <string name="Pharmacy_button_buy">Buy</string>
    <string name="Pharmacy_paracetamol_description">Paracetamol (acetaminophen) is a pain reliever and a fever reducer. The exact mechanism of action of is not known.  Paracetamol is used to treat many conditions such as headache, muscle aches, arthritis, backache, toothaches, colds, and fevers. It relieves pain in mild arthritis but has no effect on the underlying inflammation and swelling of the joint.</string>
    <string name="Pharmacy_paracetamol_usage">Use paracetamol exactly as directed on the label, or as prescribed by your doctor.  Do not use more of this medication than is recommended. An overdose of paracetamol can cause serious harm. The maximum amount for adults is 1 gram (1000 mg) per dose and 4 grams (4000 mg) per day. Using more paracetamol could cause damage to your liver. If you drink more than three alcoholic beverages per day, talk to your doctor before taking paracetamol and never use more than 2 grams (2000 mg) per day. If you are treating a child, use a pediatric form of paracetamol . Carefully follow the dosing directions on the medicine label. Do not give the medication to a child younger than 2 years old without the advice of a doctor.  Measure the liquid form of paracetamol with a special dose-measuring spoon or cup, not a regular table spoon. If you do not have a dose-measuring device, ask your pharmacist for one. You may need to shake the liquid before each use. Follow the directions on the medicine label.  The paracetamol chewable tablet must be chewed thoroughly before you swallow it.</string>
    <string name="Pharmacy_paracetamol_side_effects">Get emergency medical help if you have any of these signs of an allergic reaction to paracetamol: hives; difficulty breathing; swelling of your face, lips, tongue, or throat. Stop using this medication and call your doctor at once if you have a serious side effect such as:  low fever with nausea, stomach pain, and loss of appetite;  dark urine, clay-colored stools; or  jaundice (yellowing of the skin or eyes).  This is not a complete list of paracetamol side effects and others may occur. Call your doctor for medical advice about side effects.</string>
    <string name="Pharmacy_paracetamol_ingredients">-</string>
    <string name="title_activity_admin_portal">Doctors List</string>
    <string name="statistics">Statistics</string>
    <string name="portal">Portal</string>
    <string name="doctors">Doctors</string>
    <string name="mrs_samanthi_perera">Mrs.Samanthi Perera</string>
    <string name="add_prescription">Add Prescription</string>
    <string name="brief_description">Brief Description</string>
    <string name="your_password">Your Password</string>
    <string name="your_email">Your Email</string>
    <string name="edit">Edit</string>
    <string name="nhsl">National Hospitals - Colombo</string>

    <string name="pediatrition">Pediatrition</string>
    <string name="base_hospital_hrana">Base Hospital Hrana</string>
    <string name="dr_nihal_perera">Dr.Nihal Perera</string>

    <string name="charith_pathurana">Dr.Charitha Pathirana</string>
    <string name="to_7_00_pm">To 7.00 PM</string>
    <string name="mr_shena_perera">Mr.Shena Perera</string>
    <string name="eye_checkup">EYE CHECKUP</string>
    <string name="view">View</string>


</resources>
