<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PharmacyDetails">

    <ImageButton
        android:id="@+id/Cart"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/cart"
        android:onClick="cart"
        android:translationZ="100dp"
        android:visibility="visible"
        app:srcCompat="@drawable/cart" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/Footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/Footer"
        android:layout_below="@id/Header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/paracetamol" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Name"
                    android:layout_width="102dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="Name"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/Name_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:text="@string/Pharmacy_button_paracetamol"
                    android:textColor="@color/colorBlack" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Price"
                    android:layout_width="102dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="Price"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/Price_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/Price"
                    android:textColor="@color/colorBlack" />

                <TextView
                    android:id="@+id/price_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/Price_type"
                    android:textColor="@color/colorBlack" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Notes"
                    android:layout_width="102dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="Description"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/Notes_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/Description"
                    android:textColor="@color/colorBlack" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Usage"
                    android:layout_width="102dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="Usage"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/Usage_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/Usage"
                    android:textColor="@color/colorBlack" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Ingrediants"
                    android:layout_width="102dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="Ingrediants"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/Ingrediants_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/Ingrediants"
                    android:textColor="@color/colorBlack" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Side_effects"
                    android:layout_width="102dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="Side Ecffects"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/Side_Effects_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/Side_Effects"
                    android:textColor="@color/colorBlack" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/noOfItems"
                    android:layout_width="171dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/Price_calculated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/Price_calculated"
                    android:textColor="@color/colorBlack" />

                <Button
                    android:id="@+id/Add_to_Cart"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:text="Add to Cart" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>